# aws

./: .codespellrc  .ghci  .gitignore  .travis.yml  Aws.hs  CHANGELOG  CHANGELOG.md  LICENSE  README  README.md  README.org  TODO.org  VERSIONING  aws.cabal  aws.nix  config.nix  default.nix  errors.nix  ghci.hs  shell.nix  stack.yaml
.circleci/: config.yml
AWS/: Aws.hs  Credentials.hs  Http.hs  HttpRequest.hs  Query.hs  Response.hs  SimpleDB.hs  SimpleDb.hs  Transaction.hs  Util.hs
AWS/SimpleDb/: Error.hs  Info.hs  Metadata.hs  Model.hs
Aws/: Aws.hs  Core.hs  Credentials.hs  Debug.hs  DynamoDb.hs  Ec2.hs  Http.hs  Iam.hs  Id.hs  Metadata.hs  Network.hs  Query.hs  Response.hs  Route53.hs  S3.hs  Ses.hs  Signature.hs  SimpleDb.hs  Sqs.hs  Sqs2.hs  Transaction.hs  Util.hs  Xml.hs
Aws/DynamoDb/: Commands.hs  Core.hs
Aws/DynamoDb/Commands/: BatchGetItem.hs  BatchWriteItem.hs  DeleteItem.hs  GetItem.hs  Item.hs  PutItem.hs  Query.hs  Scan.hs  Table.hs  UpdateItem.hs
Aws/Ec2/: Commands.hs  Core.hs  InstanceMetadata.hs
Aws/Ec2/Commands/: DescribeRegions.hs
Aws/Iam/: Commands.hs  Core.hs  Internal.hs
Aws/Iam/Commands/: AddUserToGroup.hs  CreateAccessKey.hs  CreateGroup.hs  CreateUser.hs  DeleteAccessKey.hs  DeleteGroup.hs  DeleteGroupPolicy.hs  DeleteUser.hs  DeleteUserPolicy.hs  GetGroupPolicy.hs  GetUser.hs  GetUserPolicy.hs  ListAccessKeys.hs  ListGroupPolicies.hs  ListGroups.hs  ListMFADevices.hs  ListMfaDevices.hs  ListUserPolicies.hs  ListUsers.hs  PutGroupPolicy.hs  PutUserPolicy.hs  RemoveUserFromGroup.hs  UpdateAccessKey.hs  UpdateGroup.hs  UpdateUser.hs
Aws/Route53/: Commands.hs  Core.hs  Error.hs  Info.hs  Metadata.hs  Model.hs  Query.hs  Response.hs
Aws/Route53/Commands/: ChangeResourceRecordSets.hs  CreateHostedZone.hs  DeleteHostedZone.hs  GetChange.hs  GetDate.hs  GetHostedZone.hs  ListHostedZones.hs  ListResourceRecordSets.hs
Aws/S3/: Commands.hs  Core.hs  Error.hs  GetBucket.hs  GetService.hs  Info.hs  Metadata.hs  Model.hs  Query.hs  Response.hs
Aws/S3/Commands/: AbortMultipartUpload.hs  CompleteMultipartUpload.hs  CopyObject.hs  DeleteBucket.hs  DeleteLifecycle.hs  DeleteObject.hs  DeleteObjectVersion.hs  DeleteObjects.hs  GetBucket.hs  GetBucketLocation.hs  GetBucketObjectVersions.hs  GetBucketVersioning.hs  GetObject.hs  GetService.hs  HeadObject.hs  InitiateMultipartUpload.hs  Multipart.hs  MultipartUpload.hs  PutBucket.hs  PutBucketVersioning.hs  PutLifecycle.hs  PutObject.hs  UploadPart.hs
Aws/SQS/: Commands.hs  Error.hs  Info.hs  Metadata.hs  Model.hs  Query.hs  Response.hs
Aws/SQS/Commands/: ChangeMessageVisibility.hs  CreateQueue.hs  GetQueueAttributes.hs  ListQueues.hs
Aws/Ses/: Commands.hs  Core.hs  Error.hs  Info.hs  Metadata.hs  Model.hs  Query.hs  Response.hs
Aws/Ses/Commands/: DeleteIdentity.hs  GetIdentityDkimAttributes.hs  GetIdentityNotificationAttributes.hs  GetIdentityVerificationAttributes.hs  ListIdentities.hs  SendRawEmail.hs  SetIdentityDkimEnabled.hs  SetIdentityFeedbackForwardingEnabled.hs  SetIdentityNotificationTopic.hs  VerifyDomainDkim.hs  VerifyDomainIdentity.hs  VerifyEmailIdentity.hs
Aws/SimpleDb/: BatchDeleteAttributes.hs  BatchPutAttributes.hs  Commands.hs  Core.hs  CreateDomain.hs  DeleteAttributes.hs  DeleteDomain.hs  DomainMetadata.hs  Error.hs  GetAttributes.hs  Info.hs  ListDomains.hs  Metadata.hs  Model.hs  PutAttributes.hs  Query.hs  Response.hs  Select.hs
Aws/SimpleDb/Commands/: Attributes.hs  BatchDeleteAttributes.hs  BatchPutAttributes.hs  CreateDomain.hs  DeleteAttributes.hs  DeleteDomain.hs  Domain.hs  DomainMetadata.hs  GetAttributes.hs  ListDomains.hs  PutAttributes.hs  Select.hs
Aws/Sqs/: Commands.hs  Core.hs  Error.hs  Info.hs  Metadata.hs  Model.hs  Query.hs  Response.hs
Aws/Sqs/Commands/: AddPermission.hs  ChangeMessageVisibility.hs  CreateQueue.hs  DeleteMessage.hs  DeleteQueue.hs  GetQueueAttributes.hs  ListQueues.hs  Message.hs  Permission.hs  Queue.hs  QueueAttributes.hs  ReceiveMessage.hs  RecieveMessage.hs  RemovePermission.hs  SendMessage.hs  SetQueueAttributes.hs
Aws/Sqs_t/: Model.hs  Query.hs
Examples/: DescribeRegions.hs  DynamoDb.hs  GetObject.hs  GetObjectGoogle.hs  GetObjectV4.hs  MultipartTransfer.hs  MultipartUpload.hs  NukeBucket.hs  PutBucketNearLine.hs  PutObjectIA.hs  Route53Examples.hs  SimpleDb.hs  Sqs.hs
Examples/Route53/: AttemptT.hs  DynDNS.hs  LICENSE  README.md  Utils.hs  r53-dyndns.cabal  r53-dyndns.hs
Examples/Route53/contrib/: r53-dyndns.conf
misc/AmazonSimpleDB-2009-04-15-scratchpad/webapp/: BatchPutAttributes.html  CreateDomain.html  DeleteAttributes.html  DeleteDomain.html  DomainMetadata.html  GetAttributes.html  ListDomains.html  PutAttributes.html  Select.html  index.html  main.html  navbar.html
misc/AmazonSimpleDB-2009-04-15-scratchpad/webapp/css/: scratchpad.css
misc/AmazonSimpleDB-2009-04-15-scratchpad/webapp/js/: awssigner.js  hmacsha1.js  scratchpad.js
tests/: Utils.hs
tests/DynamoDb/: Main.hs  Utils.hs
tests/S3/: Main.hs
tests/Sqs/: Main.hs
